<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/today_activity_menu_item"
		android:icon="@drawable/_icon_3"
		android:title="@string/today_activity_menu_item_title"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/walks_activity_menu_item"
		android:icon="@drawable/_icon_2"
		android:title="@string/walks_activity_menu_item_title"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/statistics_activity_menu_item"
		android:icon="@drawable/_icon"
		android:title="@string/statistics_activity_menu_item_title"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/diseases4_activity_menu_item"
		android:icon="@drawable/_icon_4"
		android:title="@string/diseases4_activity_menu_item_title"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/recomendations_activity_menu_item"
		android:icon="@drawable/_icon_5"
		android:title="@string/recomendations_activity_menu_item_title"
		app:showAsAction="ifRoom"/>
</menu>